# project-tracker

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.toml  package.json
docs/: config.md  storage.md
src/: auth.rs  chat.rs  config.rs  lib.rs  main.rs  mcp_server.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/agent/: mod.rs
src/cli/: mod.rs
src/core/: mod.rs
src/db/: mod.rs  models.rs  person_repo.rs  project_repo.rs  schema.rs  team_repo.rs
src/mcp/: mod.rs  server.rs
src/storage/: mod.rs
src/tools/: mod.rs
src/utils/: mod.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx  styles.css
ui/src/components/: About.tsx  ChatInterface.tsx  DeadlinesList.tsx  MilestoneForm.tsx  MilestoneResourceForm.tsx  NoteForm.tsx  NoteList.tsx  NoteViewModal.tsx  PersonDetail.tsx  PersonForm.tsx  PersonList.tsx  PersonSelector.tsx  ProjectDetail.tsx  ProjectForm.tsx  ProjectList.tsx  ProjectResourceForm.tsx  Resources.css  Resources.tsx  StakeholderForm.tsx  TeamDetail.tsx  TeamForm.tsx  TeamList.tsx  TeamSelector.tsx
ui/src/services/: milestoneService.ts  noteService.ts  personService.ts  projectService.ts  teamService.ts
ui/src/types/: index.ts
