# Copyright 2025 Andrew C. Young <andrew@vaelen.org>
#
# SPDX-License-Identifier: MIT

[package]
name = "project-tracker"
version = "0.1.0"
authors = ["Andrew C. Young <andrew@vaelen.org>"]
edition = "2021"
license = "MIT"
description = "An intelligent project and resource management application for software engineering managers, powered by Claude AI"
homepage = "https://github.com/vaelen/project-tracker"
repository = "https://github.com/vaelen/project-tracker"
keywords = ["project-management", "resource-allocation", "claude-ai", "engineering-management"]
categories = ["command-line-utilities"]

[[bin]]
name = "track"
path = "src/main.rs"

[lib]
name = "claude_tracker"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# CLI argument parsing
clap = { version = "4.4", features = ["derive", "cargo"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# File system operations
walkdir = "2.4"
dirs = "5.0"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
# Testing utilities
mockito = "1.2"
tempfile = "3.8"
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
