# Copyright 2025 Andrew C. Young <andrew@vaelen.org>
#
# SPDX-License-Identifier: MIT

[package]
name = "claude-tracker-app"
version = "0.1.0"
authors = ["Andrew C. Young <andrew@vaelen.org>"]
edition = "2021"
license = "MIT"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Core library
claude-tracker = { path = ".." }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Logging
log = "0.4"
env_logger = "0.11"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
