# Copyright 2025 Andrew C. Young <andrew@vaelen.org>
#
# SPDX-License-Identifier: MIT

[package]
name = "project-tracker-app"
version = "0.1.0"
authors = ["Andrew C. Young <andrew@vaelen.org>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "project-tracker"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri framework
tauri = { version = "2", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Core library
project-tracker = { path = ".." }

# Database
rusqlite = { version = "0.31", features = ["bundled", "chrono", "uuid"] }

# UUID generation
uuid = { version = "1.6", features = ["v4", "serde"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
tokio-util = "0.7"

# MCP (Model Context Protocol) - HTTP/SSE transport
rmcp = { version = "0.8", features = ["server", "transport-sse-server"] }
axum = "0.8"

# Logging
log = "0.4"
env_logger = "0.11"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]
